[package]
name = "behold"
build = "build.rs"
version = "0.1.0"
authors = ["Josh Marlow <joshmarlow@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A simple library enabling contextual debugging"
homepage = "https://github.com/joshmarlow/behold-rs"
repository = "https://github.com/joshmarlow/behold-rs"
keywords = ["debugging", "debug", "behold", "contextual debugging"]
categories = ["development-tools::debugging"]

[badges]
travis-ci = {repository = "joshmarlow/behold-rs", branch="master"}

[dependencies]
lazy_static = "1.0"

[build-dependencies]
skeptic = "0.13.3"

[dev-dependencies]
skeptic = "0.13.3"

[features]
unstable = []
